fix: MCTUNE-1188 enlarge drop down wrapper width (to avoid material x-overflow-scroll) (#7)

--- a/components/AdvancedPagination/styles.css
+++ b/components/AdvancedPagination/styles.css
@@ -156,7 +156,7 @@
     margin-right: 10px;
 }
 .pageSizeBoxWrap .itemPerPageDDWrap {
-    width: 67px;
+    width: 100px;
     display: block;
     margin-right: 5px;
     float: left;
